samples/_failures_safe/1761284520_cf1e26_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2222f6f.c:133:1: error: expected identifier or ‘(’ at end of input
  133 | int
      | ^~~
